# Tengine_Tutorial

5_FaceDetector_RPI4_Camera/: CMakeLists.txt  build.sh  run.sh
5_FaceDetector_RPI4_Camera/src/: UltraFace.hpp
6_FaceRecognizer_RPI4_Camera/: CMakeLists.txt  README.md  run.sh
6_FaceRecognizer_RPI4_Camera/src/: UltraFace.cpp  main.cpp
